# toby

./: .dockerignore  .editorconfig  .gitignore  .mailmap  .travis.yml  Cargo.toml  Jenkinsfile  Vagrantfile  build.rs  configure  license.txt  readme.md
.travis/: install.sh  package-tarball.sh  prepare-deploy.sh
conf/: toby.toml  tokens.toml
conf/conf.d/: foo.toml
conf/etc/toby/: toby.toml  tokens.toml
conf/etc/toby/conf.d/: foo.toml
docs/: api.md  building.md  config.md  getting-started.md  jobs.md  telegram.md
package/: package.sh  package.spec
scripts/: install.sh  prepare-openssl.sh
src/: cli.rs  ipc.rs  lib.rs  main.rs  time.rs
src/cli/: tobyd.rs
src/config/: find.rs  mod.rs  model.rs
src/database/: mod.rs
src/fs/: flock.rs  mod.rs
src/server/: deploy.rs  mod.rs  telegram.rs  token.rs
src/slack/: mod.rs
src/telegram/: mod.rs  model.rs
src/toby/: Cargo.toml
src/toby-core/: Cargo.toml  build.rs
src/toby-core/src/: ipc.rs  job.rs
src/toby-core/src/config/: loader.rs  mod.rs  model.rs
src/toby-core/tests/: config.rs  custom_config.rs  ipc.rs
src/toby-httpd/: Cargo.toml
src/toby-httpd/src/: main.rs
src/toby-plugin/: Cargo.toml
src/toby-plugin/src/: config.rs  job.rs  lib.rs
src/toby-telegram/: Cargo.toml
src/toby-telegram/src/: lib.rs
src/toby-worker/: Cargo.toml
src/toby-worker/src/: command_executor.rs  environment_builder.rs  job_runner.rs  lib.rs  os_path.rs
src/toby-worker/src/plugin/: mod.rs
src/toby-workerd/: Cargo.toml
src/toby-workerd/src/: main.rs  path.rs
src/toby-workerd/src/plugin/: mod.rs
src/worker/: context.rs  error.rs  hook.rs  mod.rs  model.rs
tests/: _assert.sh  run.sh
tests/test-socket-owner/: Dockerfile  test.sh
toby-cli/: Cargo.toml
toby-cli/src/: main.rs
toby-core/: Cargo.toml  build.rs
toby-core/src/: cancelation.rs  config.rs  constants.rs  context.rs  identity.rs  ipc.rs  lib.rs
toby-core/src/config/: model.rs
toby-core/src/model/: job.rs
toby-core/tests/: config.rs  ipc.rs
toby-core/tests/context/: mod.rs
toby-httpd/: Cargo.toml
toby-httpd/src/: main.rs
toby-legacy/: Cargo.toml
toby-legacy/src/: lib.rs
toby-legacy/src/cli/: mod.rs  toby.rs
toby-legacy/src/config/: find.rs  model.rs
toby-legacy/src/fs/: flock.rs
toby-legacy/src/worker/: context.rs  mod.rs
toby-workerd/: Cargo.toml
toby-workerd/src/: main.rs
units/: toby-server.service  toby-worker.service  toby.service
