cargo-features = ["edition"]

[package]
name = "toby-core"
version = "0.1.0"
authors = ["Ruben Schmidmeister <ruben.schmidmeister@icloud.com>"]
publish = false
edition = "2018"

[dependencies]
bincode = "1.0"
serde = "1.0"
serde_derive = "1.0"
lazy_static = "1.1.0"
toml = "0.4"

[dev-dependencies]
tempdir = "0.3"