[package]
authors = ["Ruben Schmidmeister <ruben.schmidmeister@icloud.com>"]
name = "toby"
version = "0.1.1"
publish = false

[dependencies]
clap = "2.29"
nanoid = "0.2"
reqwest = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.4"
rocket = { version = "0.3.6", features = ["tls"] }
rocket_codegen = "0.3.6"
tempdir = "0.3"
fs2 = "0.4"
byteorder = "1"

[dependencies.rocket_contrib]
version = "0.3.6"
default-features = false
features = ["json"]
