cargo-features = ["edition"]

[package]
name = "toby-worker"
version = "0.1.0"
authors = ["Ruben Schmidmeister <ruben.schmidmeister@icloud.com>"]
edition = "2018"

[dependencies]
toby-core = { path = "../toby-core" }
toby-plugin = { path = "../toby-plugin" }
tokio = "0.1"
futures = "0.1"
libloading = "0.5"
